# aero-optim

./: .gitignore  404.html  LICENSE  README.md  auto_ffd.py  auto_gmsh.py  auto_simulator.py  custom_MUSICAA_optim.py  index.html  main_optim.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_sm.txt  search.html  setup.cfg  sitemap.xml
.github/workflows/: ci.yml
aero_optim/: geom.py  utils.py
aero_optim/ffd/: ffd.py  ffd_vae_models.py
aero_optim/main/: auto_deform_mesh.py  auto_ffd.py  auto_gmsh.py  auto_simulator.py  main_optim.py
aero_optim/mesh/: cascade_mesh.py  flat_plate_mesh.py  mesh.py  naca_base_mesh.py  naca_block_mesh.py
aero_optim/mf_sm/: mf_dnn.py  mf_infill.py  mf_models.py
aero_optim/optim/: evolution.py  generator.py  inspyred_optimizer.py  optimizer.py  pymoo_optimizer.py
aero_optim/simulator/: simulator.py
coverage/: index.html
dev_ffd/: index.html
dev_mesh/: index.html
dev_mfsm/: index.html
dev_optimizer/: index.html
dev_simulator/: index.html
docs/: about.md  coverage.md  customization.md  dev_ffd.md  dev_mesh.md  dev_mfsm.md  dev_optimizer.md  dev_simulator.md  example_mf_smo.md  example_smo.md  ffd.md  index.md  mesh.md  mfsm.md  optimizer.md  simulator.md
example_custom/: index.html
example_mf_smo/: index.html
example_smo/: index.html
examples/LRN-CASCADE/cascade_adap/: adap_robust.py  cascade.json  cascade_adap.json  cascade_rans.wolf  custom_cascade.py
examples/LRN-CASCADE/cascade_base/: cascade_base.json  cascade_base.wolf  execute.py
examples/LRN-CASCADE/cascade_mf/: cascade_mf.json  custom_cascade.py  hf_config.json  lf_config.json  main_mf_sm.py
examples/LRN-CASCADE/cascade_musicaa_base/: cascade_musicaa_base.json  custom_cascade_MUSICAA.py  custom_cascade_musicaa.py  execute.py  feos_air.ini  info.ini  ogv1_bl1.x  ogv1_bl2.x  ogv1_bl3.x  ogv1_bl4.x  ogv1_bl5.x  ogv1_bl6.x  ogv1_bl7.x  ogv1_bl8.x  ogv1_bl9.x  ogv1c_bl4.x  ogv1c_bl8.x  param.ini  param_blocks.ini  param_blocks.ini_3D  param_case.ini  param_rans.ini
examples/LRN-CASCADE/cascade_wolf_base/: cascade_wolf_base.json  cascade_wolf_base.wolf  custom_cascade_wolf.py  execute.py  plot_over_line.py
examples/NACA12/naca_adap/: adap_robust.py  naca_adap.json  naca_adap.metrix  naca_adap.wolf
examples/NACA12/naca_base/: naca_base.json  naca_base.wolf  naca_euler.wolf
examples/cascade/: adap_robust.py  cascade.json  cascade_rans.wolf  custom_cascade.py
examples/debug/: debug.json  inspyred_debug.py  pymoo_debug.py
ffd/: index.html
input/: naca_base.json  naca_block.json
mesh/: index.html
mfsm/: index.html
optimizer/: index.html
scripts/FFD/: FFD.ipynb  POD.ipynb  VAE.ipynb
scripts/MF-SM/: infill_MO.ipynb  infill_SO.ipynb  main_mf.py  main_mf_infill.py  mf_functions.py
search/: search_index.json
simulator/: index.html
src/: cascade_mesh.py  ffd.py  ins_generator.py  ins_optimizer.py  mesh.py  naca_base_mesh.py  naca_block_mesh.py  simulator.py  utils.py
src/MAIN/: auto_ffd.py  auto_gmsh.py  auto_simulator.py  main_optim.py
src/MESH/: cascade_mesh.py  naca_base_mesh.py  naca_block_mesh.py
src/OPTIM/: ins_optimizer.py
src/ffd/: ffd.py
src/main/: auto_ffd.py  auto_gmsh.py  auto_simulator.py  inspyred_optim.py  main_optim.py  pymoo_optim.py
src/mesh/: cascade_mesh.py  mesh.py  naca_base_mesh.py  naca_block_mesh.py
src/optim/: evolution.py  evolution_optimizer.py  evolutor.py  ins_optimizer.py  inspyred_optimizer.py  optimizer.py  pymoo_optimizer.py
src/simulator/: simulator.py
template/: naca_euler.wolf
tests/: test_base_config.json  test_ffd.py  test_generator.py  test_inspyred_optimizer.py  test_mesh.py  test_optimizer.py  test_pymoo_optimizer.py  test_simulator.py  test_simulator_config.json
tests/extras/: dummy_doe.txt  dummy_wolf.py  test_base_config.json  test_block_config.json  test_optimizer_config.json  test_simulator_config.json
(+49 files in other folders)
